[project]
name = "LangGraph-ReAct-MCP-Chat"
version = "0.0.1"
description = "A custom Reasoning and Action agent (using MCP Tools) in LangGraph."
authors = [
    { name = "Teddy Lee", email = "teddylee777@gmail.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.3.25",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.10",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-mcp-adapters>=0.0.7",
    "tavily-python>=0.5.4",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.89",
]
